# PythonRuns

./: .gitignore  .pre-commit-config.yaml  README.md  camel_2_snake_case.py  compare_dependencies.py  find_dependencies.py  ignore-spell-words.txt  ignore-spelling-words.txt  makefile  makefile.windows  pip_requirements.txt  pyproject.toml  requirements-dev.txt  requirements.txt  split_script.py
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  pre-commit.yml
Tests/: Tests.py
docs/: MIGRATION_CHECKLIST.md  MIGRATION_SUMMARY.md  UV_QUICK_REFERENCE.md
output/: Controle ambiental.csv  Fauna.csv  Flora.csv  Outras.csv  Pesca.csv  test.docx
pythonruns/: __init__.py  hello_world.py
pythonruns/src/mytests/: app_logging.py  backup_restore_wordpress.py  boolean_number.py  camel_2_snake_case.py  convert_pdf_to_docx.py  happy_teacher_day.py  jwt_test.py  plot_graph.py  resize_images.py  short_uuid.py  split_files.py
pythonruns/src/mytests/database/: persist_json_in_memory.py  persist_json_to_db.py  persist_json_to_db_visualize.py  persist_with_postgres.py
pythonruns/src/mytests/future/: with_future.py  without_future.py
pythonruns/src/mytests/jusbr/: TJMG.py  TRF-Proc.py  call_api_fines_ibama_brazil.py
scripts/: OLD_start_apps.sh  app_monitor.py  app_monitor.sh  app_monitor_old.py  bash-to-zsh-hist.py  clean_disk.sh  clean_snap.sh  create_renew_certif.sh  daily_git_commit.sh  daily_git_commit_BACKUP.sh  daily_git_commit_OLD_BACKUP.sh  fast-api-article-generate.py  git_reset_and_update.py  git_scan.py  import_secrets_keyring.py  install_dependencies.sh  install_python312.sh  install_server.sh  rename_out_to_log.sh  start_apps.sh  update_email.sh
sources/: I_love_you.py  TJMG.py  TRF-ClasseOrgao.py  TRF-Proc.py  app_logging.py  app_monitor.py  backup_restore_wordpress.py  boolean_number.py  calculate_power.py  camel_2_snake_case.py  compress_images.py  convert_pdf_to_docx.py  fake_data.py  fines_ibama_brazil.py  float_format.py  generate_qrcode.py  generate_qrcode_with_midle_empty.py  happy_teacher_day.py  hello_world.py  input_console.py  jwt_test.py  pickle_serialize_load.py  plot_graph.py  progress_bar.py  qrcode.py  remove_background.py  resize_image.py  resize_images.py  short_uuid.py  sort_list.py  split_files.py  split_script.py  switch_case.py
sources/database/: app_save_to_mem_db.py  persist_json_disk_to_db_visualize.py  persist_with_postgres.py  save_to_mem_db.py  test.json
tests/: test_examples.py
tests/mytests/: __init__.py  test_jwt_manager.py
