[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonruns"
version = "0.1.0"
description = "Python tests and proofs of concept"
authors = [
    { name = "Wallace Espindola", email = "wallace.espindola@gmail.com" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "python-jose[cryptography] (>=3.5.0)",
    "build (==1.2.1)",
    "click (==8.1.7)",
    "coverage (==7.5.4)",
    "faker (==26.0.0)",
    "jax (>=0.4.0)",
    "jpype1 (==1.5.0)",
    "jupyterlab (==4.2.3)",
    "lxml (==5.2.2)",
    "matplotlib (==3.9.0)",
    "mediapipe (>=0.10.0)",
    "mock (==5.1.0)",
    "numpy (>=1.26.0,<2.0.0)",
    "opencv-contrib-python (==4.11.0.86)",
    "opencv-python (==4.10.0.84)",
    "pandas (==2.2.2)",
    "paramiko (==3.4.0)",
    "pdf2docx (==0.5.8)",
    "pillow (==10.3.0)",
    "pip-check (==2.8.1)",
    "pre-commit (==4.1.0)",
    "progress (==1.6)",
    "protobuf (==4.25.7)",
    "psutil (==6.0.0)",
    "pytest (==8.3.4)",
    "python-dotenv (==1.0.1)",
    "qrcode (==7.4.2)",
    "rembg (==2.0.66)",
    "sentencepiece (==0.2.0)",
    "setuptools (==70.1.1)",
    "shortuuid (==1.0.13)",
    "sounddevice (==0.5.2)",
    "sqlite4 (==0.1.1)",
    "tqdm (==4.66.4)",
    "twine (==5.1.0)",
    "unittest-xml-reporting (==3.2.0)",
    "urllib3 (==2.2.2)",
    "wheel (==0.43.0)",
    "argparse (==1.4.0)",
    "pathlib (==1.0.1)",
]

[project.urls]
Homepage = "https://github.com/wallaceespindola"
Repository = "https://github.com/wallaceespindola/PythonRuns"

[tool.setuptools]
packages = ["pythonruns", "sources", "sources.database", "output", "resources", "scripts", "tests"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
log_cli = true

[tool.pre-commit]
hook-config = { python = "python3" }

[tool.setuptools.package-data]
sources = ["*.txt", "*.cfg", "*.ini", "*.json", "*.csv", "*.pkl"]
database = ["*.json"]
output = ["*.csv", "*.docx"]
resources = ["*.jpeg", "*.pdf"]
scripts = ["*.sh", "*.py"]
tests = ["*.py"]

[tool.pip]
requirements-file = "requirements.txt"
